--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a terminal on the web without ttyd",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"oh hello\" && exit 1"
+    "test": "echo \"oh hello there\" && exit 1"
   },
   "keywords": [],
   "author": "paritojr",
